src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__cos.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc()]\nfn cos(a: f64) -> Result<f64, EvalError> {\n    if a.is_infinite() {\n        return Err(EvalError::InfinityOutOfDomain(\"cos\".into()));\n    }\n    Ok(a.cos())\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Cos;
impl crate::func::EagerUnaryFunc for Cos {
    type Input<'a> = f64;
    type Output<'a> = Result<f64, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cos(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Cos {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(cos))
    }
}
fn cos(a: f64) -> Result<f64, EvalError> {
    if a.is_infinite() {
        return Err(EvalError::InfinityOutOfDomain("cos".into()));
    }
    Ok(a.cos())
}
