src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__exp.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc(sqlname = \"expf64\")]\nfn exp(a: f64) -> Result<f64, EvalError> {\n    let r = a.exp();\n    if r.is_infinite() {\n        return Err(EvalError::FloatOverflow);\n    }\n    if r == 0.0 {\n        return Err(EvalError::FloatUnderflow);\n    }\n    Ok(r)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Exp;
impl crate::func::EagerUnaryFunc for Exp {
    type Input<'a> = f64;
    type Output<'a> = Result<f64, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        exp(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Exp {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("expf64")
    }
}
fn exp(a: f64) -> Result<f64, EvalError> {
    let r = a.exp();
    if r.is_infinite() {
        return Err(EvalError::FloatOverflow);
    }
    if r == 0.0 {
        return Err(EvalError::FloatUnderflow);
    }
    Ok(r)
}
